--- a/css/video.css
+++ b/css/video.css
@@ -8,7 +8,7 @@
     width: 100%;
   } */
 
-  #video-container {
+  /* #video-container {
     border: solid;
     border-color: rgb(75, 73, 73);
     border-width: 4px;
@@ -44,4 +44,4 @@
     @media screen and (max-width: 338px) {
         #video-container {
           border: none;
-        }
+        } */
