Learnt about media queries and added some to change size of video component

--- a/components/VideoSection/VideoSection.module.css
+++ b/components/VideoSection/VideoSection.module.css
@@ -54,3 +54,18 @@
         width: 100%;
         position: absolute;
       }
+
+      @media screen and (max-width: 3000px) {
+        .videoResponsive {
+          width: 50%;
+          
+        }
+      }
+
+      @media screen and (max-width: 750px) {
+        .video {
+          width: 100%;
+          
+        }
+        }
+      
