--- a/components/ProjectSection4/ProjectSection4.module.css
+++ b/components/ProjectSection4/ProjectSection4.module.css
@@ -51,7 +51,12 @@
     background-color: #fdc435 ;
 }
 
+/* .projectImageBox {
+    background-color: red;
+} */
+
 .musicSalesAppImage {
-    height: 14rem;
+    height: 17rem;
+    width: 35rem;
 
 }
