--- a/components/Intro/IntroPage1.module.css
+++ b/components/Intro/IntroPage1.module.css
@@ -13,7 +13,7 @@
     flex-direction: row;
     align-items: center;
     text-align: center;
-    padding: 0px 28px;
+    padding: 0.1rem 0.5rem 0.5rem 2.3rem;
     width: 175.5px;
     height: 64.5px;
     left: 0px;
@@ -23,7 +23,8 @@
     border: 2px solid #25282b;
     border-radius: 18px;
     margin: 1rem;
-    font-size: 25px;
+    font-size: 1.4rem;
+    font-weight: 500;
     
   }
   
@@ -32,7 +33,7 @@
     flex-direction: row;
     align-items: center;
     text-align: center;
-    padding: 8px 30px;
+    padding: 0.1rem 0.5rem 0.5rem 3rem;
     width: 175.5px;
     height: 64.5px;
     left: 120px;
@@ -41,7 +42,8 @@
     border-radius: 18px;
     object-fit: contain;
     margin: 1rem;
-    font-size: 25px;
+    font-size: 1.4rem;
+    font-weight: 500;
     
   }
 
