--- a/components/ProjectSection/ProjectSection.module.css
+++ b/components/ProjectSection/ProjectSection.module.css
@@ -52,3 +52,12 @@
     background-color: #fdc435 ;
 }
 
+@media only screen and (max-width: 999px) {
+    .projectTitle {
+    font-size: 30px;
+  }
+  .projectDescription {
+    font-size: 17px;
+  }
+
+}
