--- a/components/ProjectSection4/ProjectSection4.module.css
+++ b/components/ProjectSection4/ProjectSection4.module.css
@@ -56,3 +56,13 @@
     width: 37rem;
 
 }
+
+@media only screen and (max-width: 999px) {
+    .projectTitle {
+    font-size: 30px;
+  }
+  .projectDescription {
+    font-size: 17px;
+  }
+
+}
