--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -2,19 +2,39 @@
 .introPhotoSection {
     display: flex;
     flex-direction: row;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .introPhotoSectionLeft {
     display: flex;
-    background-color: blue;
+    flex-direction: column;
+    /* background-color: blue; */
+    padding-left: 10rem;
+    /* padding-right: -5rem; */
 }
 
 .introPhotoSectionRight {
     display: flex;
-    background-color: green;
 
 }
+
+.fullstackHeading {
+    font-size: 4rem;
+    color: #fbc336;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.nameHeading {
+    font-size: 7rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    line-height: 6.5rem;
+
+
+}
+
+
 .buttonContainer {
     display: flex;
     flex-direction: row;
