--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -4,32 +4,42 @@
     flex-direction: row;
 }
 
-/* .introPhotoSection {
-    display: flex;
-    flex-direction: column;
-    background-color: red;
-    margin-right: 50rem;
-} */
 
 .introTextSectionTop {
     display: flex;
     flex-direction: column;
     background-color: blue;
     margin-left: 10rem;
+    /* margin-right: -15rem; */
     /* padding-right: -5rem; */
+    z-index: 2;
 }
 
 .introTextSectionBottom {
     background-color: fuchsia;
-    margin-left: 10rem;
-    padding-right: 5rem;
-    font-size: 1.5rem;
+    margin-left: 20rem;
+    margin-top: 16rem;
+    /* padding-right: -2rem; */
+    font-size: 1.7rem;
+    /* margin-right: -15rem; */
+    z-index: 2;
+    
 
 }
 
 .imageSection {
     height: 100%;
     width: 100%;
+    z-index: 1;
+
+
+}
+
+.catImage {
+    width: 40rem;
+    margin-left: -15rem;
+    z-index: 1; 
+    
 
 }
 
@@ -38,19 +48,17 @@
     color: #fbc336;
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
+    margin-left: 9rem;
 }
 
 .nameHeading {
-    font-size: 7rem;
+    font-size: 6rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     line-height: 6.5rem;
+    margin-left: 9rem;
 
 
-}
-
-.catImage {
-    width: 40rem;
 }
 
 
