--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -1,28 +1,27 @@
 .mainIntroContainer {
     display: flex;
-    background-color: orange;
+    /* background-color: orange; */
     flex-direction: row;
+   
 }
 
 
 .introTextSectionTop {
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    /* background-color: blue; */
     margin-left: 10rem;
-    /* margin-right: -15rem; */
-    /* padding-right: -5rem; */
     z-index: 2;
+    
 }
 
 .introTextSectionBottom {
-    background-color: fuchsia;
-    margin-left: 20rem;
+    /* background-color: fuchsia; */
+    margin-left: 23rem;
     margin-top: 16rem;
-    /* padding-right: -2rem; */
     font-size: 1.7rem;
-    /* margin-right: -15rem; */
-    z-index: 2;
+   
+    
     
 
 }
@@ -30,7 +29,7 @@
 .imageSection {
     height: 100%;
     width: 100%;
-    z-index: 1;
+    
 
 
 }
@@ -38,17 +37,19 @@
 .catImage {
     width: 40rem;
     margin-left: -15rem;
-    z-index: 1; 
+    
+    
     
 
 }
 
 .fullstackHeading {
-    font-size: 4rem;
+    font-size: 3.8rem;
     color: #fbc336;
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
-    margin-left: 9rem;
+    margin-left: 12rem;
+    
 }
 
 .nameHeading {
@@ -56,7 +57,9 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     line-height: 6.5rem;
-    margin-left: 9rem;
+    margin-left: 12rem;
+    z-index: 6;
+   
 
 
 }
