--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -20,10 +20,7 @@
     margin-left: 23rem;
     margin-top: 16rem;
     font-size: 1.7rem;
-   
-    
-    
-
+  
 }
 
 .imageSection {
@@ -163,6 +160,51 @@
         line-height: 5rem;
     }
     }
+
+    @media only screen and (max-width: 1400px) {
+      .fullstackHeading {
+        font-size: 2rem;
+    }
+      .nameHeading {
+          font-size: 3.3rem;
+          line-height: 5rem;
+      }
+      .introTextSectionBottom {
+        margin-left: 23rem;
+        margin-top: 12rem;
+        font-size: 1.4rem;
+      
+    }
+      }
+
+      @media only screen and (max-width: 1300px) {
+        .introTextSectionTop {
+          margin-left: 8rem;
+          
+          
+      }
+        .catImage {
+          margin-left: -10rem;
+          
+        
+      }
+        .introTextSectionBottom {
+          margin-left: 20rem;
+          margin-top: 12rem;
+          font-size: 1.4rem;
+        
+      }
+      .nameHeading {
+        font-size: 3.3rem;
+        line-height: 4rem;
+    }
+        }
+
+        @media only screen and (max-width: 1150px) {
+
+
+
+        }
 
   @media only screen and (max-width: 999px) {
     .firstButton {
