--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -201,9 +201,32 @@
         }
 
         @media only screen and (max-width: 1150px) {
+          .introTextSectionTop {
+            margin-left: 4.5rem;
+        }
+          .catImage {
+            margin-left: -9.5rem;
+        }
+          .introTextSectionBottom {
+            margin-left: 16rem;
+            margin-top: 12rem;
+            font-size: 1.4rem;
+        }
+        }
 
-
-
+        @media only screen and (max-width: 1050px) {
+          .introTextSectionTop {
+            margin-left: 1rem;
+        }
+          .catImage {
+            margin-left: -7rem;
+            
+        }
+          .introTextSectionBottom {
+            margin-left: 13rem;
+            margin-top: 7rem;
+            font-size: 1.2rem;
+        }
         }
 
   @media only screen and (max-width: 999px) {
@@ -219,4 +242,25 @@
     padding: 0.1rem 0.5rem 0.5rem 2.5rem;
   }
 
+}
+
+@media only screen and (max-width: 950px) {
+  .fullstackHeading {
+    margin-left: 8rem;
+}
+  .nameHeading {
+      font-size: 3rem;
+      line-height: 3.5rem;
+      margin-left: 8rem;
+
+  }
+  .catImage {
+    margin-left: -5rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 9rem;
+    margin-top: 4rem;
+    font-size: 1.1rem;
+}
 }
