--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -264,3 +264,133 @@
     font-size: 1.1rem;
 }
 }
+
+@media only screen and (max-width: 825px) {
+  .fullstackHeading {
+    margin-left: 6rem;
+}
+  .nameHeading {
+      font-size: 3rem;
+      line-height: 3.5rem;
+      margin-left: 6rem;
+
+  }
+  .catImage {
+    margin-left: -5rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 7rem;
+    margin-top: 4rem;
+    font-size: 1.1rem;
+}
+}
+
+@media only screen and (max-width: 770px) {
+  .fullstackHeading {
+    margin-left: 4rem;
+}
+  .nameHeading {
+      font-size: 3rem;
+      line-height: 3rem;
+      margin-left: 4rem;
+
+  }
+  .catImage {
+    margin-left: -4rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 5rem;
+    margin-top: 3.5rem;
+    font-size: 1rem;
+}
+}
+
+@media only screen and (max-width: 720px) {
+  .fullstackHeading {
+    font-size: 1.9rem;
+    margin-left: 3rem;
+}
+  .nameHeading {
+      font-size: 2.7rem;
+      line-height: 2.7rem;
+      margin-left: 3rem;
+
+  }
+  .catImage {
+    margin-left: -4rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 4rem;
+    margin-top: 3.5rem;
+    font-size: 1rem;
+}
+}
+
+@media only screen and (max-width: 670px) {
+  .fullstackHeading {
+    font-size: 1.6rem;
+    margin-left: 3rem;
+}
+  .nameHeading {
+      font-size: 2.5rem;
+      line-height: 2.7rem;
+      margin-left: 3rem;
+
+  }
+  .catImage {
+    margin-left: -4rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 4rem;
+    margin-top: 3rem;
+    font-size: 0.9rem;
+}
+}
+
+@media only screen and (max-width: 580px) {
+  .fullstackHeading {
+    font-size: 1.4rem;
+    margin-left: 3rem;
+}
+  .nameHeading {
+      font-size: 2.2rem;
+      line-height: 2.7rem;
+      margin-left: 3rem;
+
+  }
+  .catImage {
+    margin-left: -4rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 4rem;
+    margin-top: 3rem;
+    font-size: 0.9rem;
+}
+}
+
+@media only screen and (max-width: 510px) {
+  .fullstackHeading {
+    font-size: 1.3rem;
+    margin-left: 3rem;
+}
+  .nameHeading {
+      font-size: 2rem;
+      line-height: 2.7rem;
+      margin-left: 3rem;
+
+  }
+  .catImage {
+    margin-left: -4rem;
+    
+}
+  .introTextSectionBottom {
+    margin-left: 4rem;
+    margin-top: 3rem;
+    font-size: 0.9rem;
+}
+}
