--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -451,19 +451,9 @@
 }
 
 .firstButton {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-align: center;
   padding: 0.1rem 0.5rem 0.5rem 1.9rem;
   width: 9rem;
   height: 3.5rem;
-  /* left: 0px;
-  top: 0px; */
-  object-fit: contain;
-  background: #fdc435;
-  border: 2px solid #25282b;
-  border-radius: 18px;
   margin: 0.5rem;
   font-size: 1.2rem;
   font-weight: 500;
@@ -471,21 +461,60 @@
 }
 
 .secondButton {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-align: center;
   padding: 0.1rem 0.5rem 0.5rem 2.3rem;
   width: 9rem;
   height: 3.5rem;
-  /* left: 120px; */
-  /* top: 43px; */
-  border: 2px solid #25282b;
-  border-radius: 18px;
-  object-fit: contain;
   margin: 0.5rem;
   font-size: 1.2rem;
   font-weight: 500;
   
 }
+}
+
+@media only screen and (max-width: 390px) {
+  .fullstackHeading {
+    font-size: 1rem;
+    margin-left: 0.5rem;
+}
+  .nameHeading {
+      font-size: 1.6rem;
+      line-height: 2rem;
+      margin-left: 0.5rem;
+
+  }
+  .catImage {
+    margin-left: -1rem;
+    /* width: 10rem; */
+    
+}
+  .introTextSectionBottom {
+    margin-left: 1.5rem;
+    margin-top: 2rem;
+    font-size: 0.8rem;
+}
+
+}
+
+@media only screen and (max-width: 330px) {
+  .fullstackHeading {
+    font-size: 1rem;
+    margin-left: 0.5rem;
+}
+  .nameHeading {
+      font-size: 1.6rem;
+      line-height: 2rem;
+      margin-left: 0.5rem;
+
+  }
+  .catImage {
+    margin-left: -1rem;
+    /* width: 10rem; */
+    
+}
+  .introTextSectionBottom {
+    margin-left: 1.5rem;
+    margin-top: 2rem;
+    font-size: 0.8rem;
+}
+
 }
