--- a/components/ProjectSection/ProjectSection.module.css
+++ b/components/ProjectSection/ProjectSection.module.css
@@ -1,3 +1,22 @@
+.projectSection1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+  justify-content: space-evenly;
+
+  margin: 0.5rem;
+  border-color: black;
+  border-width: 0.15rem;
+  padding: 0.5rem;
+  border-radius: 20px;
+}
+
+
+.projectTextBox {
+  flex-grow: 0;
+  width: 50rem;
+  padding: 0.5rem;
+}
 
 .projectTitle {
     display: flex;
@@ -46,10 +65,57 @@
     /* Inside auto layout */
     
     flex: none;
-    order: 2;
+    /* order: 2; */
     flex-grow: 0;
     margin: 24px 0px;
     background-color: #fdc435 ;
+}
+
+@media only screen and (max-width: 1500px) {
+  .projectTextBox {
+    flex-grow: 0;
+    width: 40rem;
+    padding: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .projectTitle {
+    font-size: 2.3rem;
+    line-height: 150%;
+    
+}
+
+.projectDescription {
+    font-size: 1.1rem;
+    line-height: 150%;
+}
+
+.projectButton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px 24px;
+    
+    width: 150px;
+    height: 43px;
+    left: 20px;
+    top: 189px;
+    
+}
+
+.bootcamperAppImage {
+  height: 120%;
+}
+        
+}
+
+@media only screen and (max-width: 1200px) {
+  .projectTextBox {
+    flex-grow: 0;
+    width: 30rem;
+    padding: 0.5rem;
+  }
 }
 
 @media only screen and (max-width: 999px) {
@@ -61,3 +127,46 @@
   }
 
 }
+
+@media only screen and (max-width: 950px) {
+  .projectTextBox {
+    flex-grow: 0;
+    width: 25rem;
+    padding: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  .projectSection1 {
+    display: flex;
+    flex-direction: column;
+   
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  /* .projectSection1 {
+    background-color: red;
+   font-size: 0.8rem;
+   width: 100%; 
+   overflow-x: scroll; 
+   
+  } */
+  .projectTitle {
+    font-size: 2rem;
+    line-height: 150%;
+    
+}
+
+.projectTextBox {
+  width: 18rem;
+}
+
+.projectDescription {
+    font-size: 1rem;
+    line-height: 150%;
+    text-wrap: wrap;
+}
+
+}
+
