--- a/components/ProjectSection4/ProjectSection4.module.css
+++ b/components/ProjectSection4/ProjectSection4.module.css
@@ -1,68 +1,164 @@
-.projectTitle {
+.projectSection1 {
     display: flex;
-    flex-direction: column;
-    font-family: Playfair Display;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 150%;
-    color: #25282B;
-    
-}
-
-.projectDescription {
-    display: flex;
-    flex-direction: column;
-    
-    
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 150%;
-
-    color: black;
-
-}
-
-.projectButton {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px 24px;
-    
-    width: 150px;
-    height: 43px;
-    left: 20px;
-    top: 189px;
-    
-    /* font / high-emphasis */
-    
-    border: 1px solid #25282B;
-    box-sizing: border-box;
-    border-radius: 24px;
-    
-    /* Inside auto layout */
-    
-    flex: none;
-    order: 2;
+    flex-direction: row;
+    align-items: center; 
+    justify-content: space-evenly;
+  
+    margin: 0.5rem;
+    border-color: black;
+    border-width: 0.15rem;
+    padding: 0.5rem;
+    border-radius: 20px;
+  }
+  
+  
+  .projectTextBox {
     flex-grow: 0;
-    margin: 24px 0px;
-    background-color: #fdc435 ;
-}
-
-.musicSalesAppImage {
-    height: 15rem;
-    width: 37rem;
-
-}
-
-@media only screen and (max-width: 999px) {
-    .projectTitle {
-    font-size: 30px;
+    width: 50rem;
+    padding: 0.5rem;
   }
+  
+  .projectTitle {
+      display: flex;
+      flex-direction: column;
+      font-family: Playfair Display;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 40px;
+      line-height: 150%;
+      color: #25282B;
+      
+  }
+  
   .projectDescription {
-    font-size: 17px;
+      display: flex;
+      flex-direction: column;
+      
+      
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 150%;
+  
+      color: black;
+  
   }
-
-}
+  
+  .projectButton {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 8px 24px;
+      
+      width: 150px;
+      height: 43px;
+      left: 20px;
+      top: 189px;
+      
+      /* font / high-emphasis */
+      
+      border: 1px solid #25282B;
+      box-sizing: border-box;
+      border-radius: 24px;
+      
+      /* Inside auto layout */
+      
+      flex: none;
+      /* order: 2; */
+      flex-grow: 0;
+      margin: 24px 0px;
+      background-color: #fdc435 ;
+  }
+  
+  @media only screen and (max-width: 1500px) {
+    .projectTextBox {
+      flex-grow: 0;
+      width: 40rem;
+      padding: 0.5rem;
+    }
+  }
+  
+  @media only screen and (max-width: 1300px) {
+    .projectTitle {
+      font-size: 2.3rem;
+      line-height: 150%;
+      
+  }
+  
+  .projectDescription {
+      font-size: 1.1rem;
+      line-height: 150%;
+  }
+  
+  .projectButton {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 8px 24px;
+      
+      width: 150px;
+      height: 43px;
+      left: 20px;
+      top: 189px;
+      
+  }
+  
+  .bootcamperAppImage {
+    height: 120%;
+  }
+          
+  }
+  
+  @media only screen and (max-width: 1200px) {
+    .projectTextBox {
+      flex-grow: 0;
+      width: 30rem;
+      padding: 0.5rem;
+    }
+  }
+  
+  @media only screen and (max-width: 999px) {
+      .projectTitle {
+      font-size: 30px;
+    }
+    .projectDescription {
+      font-size: 17px;
+    }
+  
+  }
+  
+  @media only screen and (max-width: 950px) {
+    .projectTextBox {
+      flex-grow: 0;
+      width: 25rem;
+      padding: 0.5rem;
+    }
+  }
+  
+  @media only screen and (max-width: 830px) {
+    .projectSection1 {
+      display: flex;
+      flex-direction: column;
+     
+    }
+  }
+  
+  @media only screen and (max-width: 420px) {
+    .projectTitle {
+      font-size: 2rem;
+      line-height: 150%;
+      
+  }
+  
+  .projectTextBox {
+    width: 18rem;
+  }
+  
+  .projectDescription {
+      font-size: 1rem;
+      line-height: 150%;
+      text-wrap: wrap;
+  }
+  
+  }
