--- a/components/ProjectSection/ProjectSection.module.css
+++ b/components/ProjectSection/ProjectSection.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center; 
-  justify-content: space-evenly;
+  justify-content: center;
 
   margin: 0.5rem;
   border-color: black;
