--- a/components/ProjectSection2/ProjectSection2.module.css
+++ b/components/ProjectSection2/ProjectSection2.module.css
@@ -1,8 +1,8 @@
-.projectSection2 {
+.projectSection1 {
   display: flex;
   flex-direction: row;
   align-items: center; 
-  justify-content: center;
+  justify-content: space-evenly;
 
   margin: 0.5rem;
   border-color: black;
@@ -15,8 +15,6 @@
 .projectTextBox {
   flex-grow: 0;
   width: 50rem;
-  /* background-color: red; */
-  margin-left:  25rem;
   padding: 0.5rem;
 }
 
