--- a/components/ProjectSection/ProjectSection.module.css
+++ b/components/ProjectSection/ProjectSection.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center; 
-  justify-content: center;
+  justify-content: space-evenly;
 
   margin: 0.5rem;
   border-color: black;
@@ -162,4 +162,3 @@
 }
 
 }
-
