--- a/components/IntroSection2New/IntroSection2New.module.css
+++ b/components/IntroSection2New/IntroSection2New.module.css
@@ -73,8 +73,36 @@
             
         @media only screen and (max-width: 600px) {
             .introContainer {
+               /* background-color: aqua; */
                 display: flex;
                 flex-direction: column;
-                margin-left: 15rem;
             }
+            .introLeft {
+                display: flex;
+                flex-direction: row;
+                padding: 0;
+                justify-content: flex-start;
+                /* background-color: red; */
+                margin-left: -4rem;
+            
+            }
+
+            .introRight {
+                display: flex;
+                flex-direction: row;
+                /* padding-right: 8rem; */
+                justify-content: center;
+                /* background-color: green; */
+                margin-left: 0;
+                margin-right: 0;
+            
+            }
+        }
+
+        @media only screen and (max-width: 530px) {
+            .introLeft {
+                background-color: red;
+                margin-left: -6rem;
+            }
+
         }
