--- a/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
+++ b/components/IntroPhotoSectionNew/IntroPhotoSectionNew.module.css
@@ -303,6 +303,12 @@
     margin-top: 3.5rem;
     font-size: 1rem;
 }
+.firstButton {
+  margin: 0 0 0 0;
+}
+.secondButton {
+  margin: 0 0 0 0;
+}
 }
 
 @media only screen and (max-width: 720px) {
